BJS2-70877
Исправление замечаний от "@MarselYsup"